# Social_network

./: readme.txt
client/: CMakeLists.txt  makefile
client/include/: connectionHandler.h  readFromClient.h  readFromServer.h
client/src/: BGSclient.cpp  connectionHandler.cpp  readFromClient.cpp  readFromServer.cpp
server/src/main/java/bgu/spl/net/Messages/: ACK.java  Block.java  Error.java  Follow.java  LogStat.java  Login.java  Logout.java  Message.java  Notification.java  PM.java  Post.java  Register.java  Stat.java
server/src/main/java/bgu/spl/net/api/: BguEncoderDecoder.java  BguMessageProtocol.java  User.java
server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BguConnections.java  BguReactor.java  BguServer.java  BlockingConnectionHandler.java  Connections.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
